--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@tanstack/react-query": "^5.35.5",
     "@tanstack/react-table": "^8.16.0",
     "@uploadthing/react": "^6.5.3",
     "class-variance-authority": "^0.7.0",
@@ -31,6 +32,7 @@
     "react-loading-skeleton": "^3.4.0",
     "react-pdf": "^8.0.2",
     "react-resize-detector": "^10.0.1",
+    "react-textarea-autosize": "^8.5.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.10.3"
