--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.10",
     "@kinde-oss/kinde-auth-nextjs": "^2.2.5",
     "@langchain/openai": "^0.0.28",
     "@langchain/pinecone": "^0.0.4",
@@ -24,11 +25,13 @@
     "@tanstack/react-query": "^5.35.5",
     "@tanstack/react-table": "^8.16.0",
     "@uploadthing/react": "^6.5.3",
+    "ai": "^3.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "langchain": "^0.1.37",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
+    "openai": "^4.45.0",
     "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
@@ -36,6 +39,7 @@
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.4.0",
     "react-pdf": "^8.0.2",
+    "react-query": "^3.39.3",
     "react-resize-detector": "^10.0.1",
     "react-textarea-autosize": "^8.5.3",
     "tailwind-merge": "^2.3.0",
