--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.4.0",
+    "react-markdown": "^9.0.1",
     "react-pdf": "^8.0.2",
     "react-query": "^3.39.3",
     "react-resize-detector": "^10.0.1",
     "react-textarea-autosize": "^8.5.3",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.10.3",
