--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "^5.35.5",
     "@tanstack/react-table": "^8.16.0",
     "@uploadthing/react": "^6.5.3",
+    "@vercel/analytics": "^1.2.2",
     "ai": "^3.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
